--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkJ4bR6CW6ANU07cyugYAV",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOESCF+LPVc0uVVwQUhHlL3"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mehmetzorlu/tensowflow_bootcamp/blob/main/01_neural_network_regression_with_tensorflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -346,6 +335,15 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TEwxjQNsc94S"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
