--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeUdlJEiCbNaliw4DQwjyx"
+      "authorship_tag": "ABX9TyMxehKQjV3pqWPcUdHewgFV"
     },
     "kernelspec": {
       "name": "python3",
@@ -3209,11 +3209,109 @@
         "\n",
         "To visualize predictions, it's a good idea to plot them against the ground truth lables.\n",
         "\n",
-        "Often you'll see this in the form of 'y_test'"
+        "Often you'll see this in the form of 'y_test' or `y_true` versus `y_pred` (ground truth versus your model's predictions)."
       ],
       "metadata": {
         "id": "QC5WigG_rwf0"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make some predicitons\n",
+        "y_pred = model.predict(X_test)\n",
+        "y_pred"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "91sSo1T2I6wz",
+        "outputId": "034cc82a-dabd-4035-ea2c-d668da1b10af"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 117ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[42.510662],\n",
+              "       [45.235394],\n",
+              "       [47.960125],\n",
+              "       [50.68486 ],\n",
+              "       [53.409588],\n",
+              "       [56.134323],\n",
+              "       [58.85906 ],\n",
+              "       [61.58379 ],\n",
+              "       [64.308525],\n",
+              "       [67.033264]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "En87Ie5-JLvC",
+        "outputId": "46de3458-1ddf-483c-8bab-4c6a86af3ecb"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=int32, numpy=array([ 70,  74,  78,  82,  86,  90,  94,  98, 102, 106], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🔑 **Note** If you feel like you're goind to reuse some kind of functionality in the future, it's a good idea to turn it into a function."
+      ],
+      "metadata": {
+        "id": "On5EOvCnJ7tp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's create a plotting function\n",
+        "def plot_predicitons(train_data=X_train,\n",
+        "                     train_labels=y_train,\n",
+        "                     test_data=X_test,\n",
+        "                     test_labels=y_test,\n",
+        "                     predictions=y_pred):\n",
+        "  \"\"\"\n",
+        "  Plot training data, test data, and compares predictions to ground truth labels.\n",
+        "  \"\"\""
+      ],
+      "metadata": {
+        "id": "XAcNjKnMKIzj"
+      },
+      "execution_count": 48,
+      "outputs": []
     }
   ]
 }
