mean absolute error

--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCZNK2pHouD1+0oIvcHmq6"
+      "authorship_tag": "ABX9TyNDOi+2ebP30gR/Xi+df/K9"
     },
     "kernelspec": {
       "name": "python3",
@@ -3390,46 +3390,31 @@
       "cell_type": "code",
       "source": [
         "# Calculate the mean absolute error\n",
-        "abs(y_pred-y_test)"
+        "# mae = sum(abs(y_pred.reshape(-1) - y_test)) / len(y_test);\n",
+        "# mae\n",
+        "#mae = sum(abs(y_pred.squeeze() - y_test)) / len(y_test);\n",
+        "#mae\n",
+        "tf.keras.metrics.mae(y_true = y_test,\n",
+        "                     y_pred = tf.squeeze(y_pred))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "atSLOhyCIgzd",
-        "outputId": "286b36fd-7a5b-4bfa-d04b-2f71acfbd60b"
+        "outputId": "7aaf6a94-8058-46f4-bff3-314a651681ff"
       },
-      "execution_count": 136,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 0.8160553 ,  4.8160553 ,  8.816055  , 12.816055  , 16.816055  ,\n",
-              "        20.816055  , 24.816055  , 28.816055  , 32.816055  , 36.816055  ],\n",
-              "       [ 3.7037048 ,  0.29629517,  4.296295  ,  8.296295  , 12.296295  ,\n",
-              "        16.296295  , 20.296295  , 24.296295  , 28.296295  , 32.296295  ],\n",
-              "       [ 8.223465  ,  4.223465  ,  0.22346497,  3.776535  ,  7.776535  ,\n",
-              "        11.776535  , 15.776535  , 19.776535  , 23.776535  , 27.776535  ],\n",
-              "       [12.743233  ,  8.743233  ,  4.7432327 ,  0.7432327 ,  3.2567673 ,\n",
-              "         7.2567673 , 11.256767  , 15.256767  , 19.256767  , 23.256767  ],\n",
-              "       [17.262993  , 13.262993  ,  9.262993  ,  5.262993  ,  1.2629929 ,\n",
-              "         2.7370071 ,  6.737007  , 10.737007  , 14.737007  , 18.737007  ],\n",
-              "       [21.78276   , 17.78276   , 13.782761  ,  9.782761  ,  5.7827606 ,\n",
-              "         1.7827606 ,  2.2172394 ,  6.2172394 , 10.217239  , 14.217239  ],\n",
-              "       [26.30252   , 22.30252   , 18.30252   , 14.302521  , 10.302521  ,\n",
-              "         6.3025208 ,  2.3025208 ,  1.6974792 ,  5.6974792 ,  9.697479  ],\n",
-              "       [30.82228   , 26.82228   , 22.82228   , 18.82228   , 14.822281  ,\n",
-              "        10.822281  ,  6.822281  ,  2.822281  ,  1.1777191 ,  5.177719  ],\n",
-              "       [35.34205   , 31.342049  , 27.342049  , 23.342049  , 19.342049  ,\n",
-              "        15.342049  , 11.342049  ,  7.3420486 ,  3.3420486 ,  0.65795135],\n",
-              "       [39.86181   , 35.86181   , 31.861809  , 27.861809  , 23.861809  ,\n",
-              "        19.861809  , 15.861809  , 11.861809  ,  7.861809  ,  3.8618088 ]],\n",
-              "      dtype=float32)"
+              "<tf.Tensor: shape=(), dtype=float32, numpy=1.7453460693359375>"
             ]
           },
           "metadata": {},
-          "execution_count": 136
+          "execution_count": 161
         }
       ]
     },
