mean square error

--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDOi+2ebP30gR/Xi+df/K9"
+      "authorship_tag": "ABX9TyOui6ku97le+WfXDf2fNpCb"
     },
     "kernelspec": {
       "name": "python3",
@@ -3417,6 +3417,54 @@
           "execution_count": 161
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the mean square error\n",
+        "#mae = sum((tf.squeeze(y_pred) - y_test) ** 2) / len(y_test);\n",
+        "#mae\n",
+        "tf.keras.metrics.mse(y_true = y_test,\n",
+        "                     y_pred = tf.squeeze(y_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j9M7b0WSQpr0",
+        "outputId": "75b9a615-4954-413a-e105-2b303be17884"
+      },
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=float32, numpy=4.54791784286499>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 167
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make some functions t o reuse MAE and MSE\n",
+        "def mae(y_true, y_pred):\n",
+        "  return tf.keras.metrics.mae(y_true=y_true,\n",
+        "                              y_pred=y_pred);\n",
+        "\n",
+        "def mse(y_true, y_pred):\n",
+        "  return tf.keras.metrics.mse(y_true=y_true,\n",
+        "                              y_pred=y_pred);\n"
+      ],
+      "metadata": {
+        "id": "dviiUfMrSIos"
+      },
+      "execution_count": 170,
+      "outputs": []
     },
     {
       "cell_type": "code",
