save a tensorflow model

--- a/01_neural_network_regression_with_tensorflow.ipynb
+++ b/01_neural_network_regression_with_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOasK9Lq8o3YKLCbf8FDgp"
+      "authorship_tag": "ABX9TyNYXWggv4VPgsjMRCJh2GvF"
     },
     "kernelspec": {
       "name": "python3",
@@ -5087,12 +5087,12 @@
         ""
       ],
       "metadata": {
-        "id": "YvNZkiSadhG2",
-        "outputId": "57895606-e04a-45bd-ee8f-e07aa8a999bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "YvNZkiSadhG2",
+        "outputId": "57895606-e04a-45bd-ee8f-e07aa8a999bf"
       },
       "execution_count": 94,
       "outputs": [
@@ -5444,12 +5444,12 @@
         "model_2.summary()"
       ],
       "metadata": {
-        "id": "cy46K8Ave6ZU",
-        "outputId": "23873e25-4f82-452a-9ca9-c9838932ec89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        }
+        },
+        "id": "cy46K8Ave6ZU",
+        "outputId": "23873e25-4f82-452a-9ca9-c9838932ec89"
       },
       "execution_count": 97,
       "outputs": [
@@ -5551,14 +5551,14 @@
         "model_1.summary()"
       ],
       "metadata": {
-        "id": "YKmGjP7pe-r4",
-        "outputId": "a5703323-ce1f-4bff-8b16-7ca364635db9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        }
+        },
+        "id": "YKmGjP7pe-r4",
+        "outputId": "83777be0-6e49-4f91-eb0a-32182f9e4bb6"
       },
-      "execution_count": 99,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5678,13 +5678,56 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Saving our models\n",
+        "\n",
+        "Saving our models allows us to use them outside of Google Colab (or wherever they were trained) such as in a web application or a mobile app.\n",
+        "\n",
+        "There are two main formats we can save our model's too:\n",
+        "\n",
+        "1. The SaveModel format\n",
+        "2. The HDF5 format\n"
+      ],
       "metadata": {
         "id": "RSkkeClWhk_I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save model using the SavedModel format\n",
+        "model_1.save(\"best_model_SavedModel_format.keras\")"
+      ],
+      "metadata": {
+        "id": "wroF2_ro7kX_"
       },
-      "execution_count": null,
+      "execution_count": 106,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save model using the HDF5 format\n",
+        "model_2.save(\"best_model_HDF5_format.h5\")"
+      ],
+      "metadata": {
+        "id": "djgcsR0r8y78",
+        "outputId": "a453b803-8172-4b03-ee59-11c61401caaf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        }
+      ]
     }
   ]
 }
