checking input and output shapes (75)

--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAsH21EW8P8LTxGjP2878j"
+      "authorship_tag": "ABX9TyOrI2FfG9E5dxmIsEGLgc7+"
     },
     "kernelspec": {
       "name": "python3",
@@ -623,6 +623,115 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "⚒ **Exercise:** before pushing forward, spend 10-minutes playing around with https://playground.tensorflow.org/ building and running different neural networks. See what happens when you change different hyperparameters."
+      ],
+      "metadata": {
+        "id": "8cbhFmx0pskj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Input and Output shapes"
+      ],
+      "metadata": {
+        "id": "l9AGiICYqmY1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check the shapes of our features and labels\n",
+        "X.shape, y.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MmfZTIdhql3O",
+        "outputId": "783ecf34-879e-4083-83c5-5e352309a854"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1000, 2), (1000,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# How many samples we're woorking\n",
+        "len(X), len(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "__uQjWNrq2Bj",
+        "outputId": "5b5efacc-75dc-42df-a9fe-5e523ce786dc"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1000, 1000)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the first example of features and labels\n",
+        "X[0], y[0]\n",
+        "X[10], y[10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LcbmPKPqq6_x",
+        "outputId": "0264e976-dd8b-407e-df3d-d4f3e8fe0eb5"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([-0.58287154, -0.55384031]), 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## steps in modeling"
+      ],
+      "metadata": {
+        "id": "YTmp6V6irIBp"
+      }
     }
   ]
 }
