building a classification model (76)

--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrI2FfG9E5dxmIsEGLgc7+"
+      "authorship_tag": "ABX9TyPd2KDdjUZVwkGEsl6yPPL0"
     },
     "kernelspec": {
       "name": "python3",
@@ -727,10 +727,235 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## steps in modeling"
+        "## Steps in modelling\n",
+        "\n",
+        "1. Create or import a model\n",
+        "2. Compile the model\n",
+        "3. Fit the model\n",
+        "4. Evaluate the model\n",
+        "5. Tweak\n",
+        "6. Evaluate..."
       ],
       "metadata": {
         "id": "YTmp6V6irIBp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import TensorFlow\n",
+        "import tensorflow as tf\n",
+        "tf.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "rdJ0ITDU2TYd",
+        "outputId": "8fc5b0f4-9a65-46e3-d19c-b94722fdec9e"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.18.0'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set the random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# 1. Create the model using the Sequenctial API\n",
+        "model_1 = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Dense(1)\n",
+        "])\n",
+        "\n",
+        "# 2. Compile the model\n",
+        "model_1.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+        "                optimizer=tf.keras.optimizers.SGD(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "# 3. Fit the model\n",
+        "model_1.fit(X, y, epochs=5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eUtjNKWhr7y8",
+        "outputId": "951945f7-6386-42c5-ad7f-dcef14b87254"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.4839 - loss: 6.3036\n",
+            "Epoch 2/5\n",
+            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4741 - loss: 5.1908\n",
+            "Epoch 3/5\n",
+            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.4731 - loss: 4.8804\n",
+            "Epoch 4/5\n",
+            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4779 - loss: 3.9845\n",
+            "Epoch 5/5\n",
+            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.4980 - loss: 0.9889\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x78be86e77710>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's try and improve our model by training for longer\n",
+        "model_1.fit(X, y, epochs=200, verbose=0)\n",
+        "model_1.evaluate(X, y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZAiBjVv-3BTy",
+        "outputId": "ca2659e7-ccae-44bf-8a67-88fccf5f7337"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4885 - loss: 0.6927  \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6932888031005859, 0.4740000069141388]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since we're working on a binary classification problem and our model is getting around ~50% accuracy ... it's performing as if it's guessing.\n",
+        "\n",
+        "So let's step things up a notch and add an extra layer."
+      ],
+      "metadata": {
+        "id": "gHMcx8rd3nni"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set the random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# 1. Create a model, this time with 2 layers\n",
+        "model_2 = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Dense(1),\n",
+        "    tf.keras.layers.Dense(1)\n",
+        "])\n",
+        "\n",
+        "# 2. Compile the model\n",
+        "model_2.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+        "                optimizer=tf.keras.optimizers.SGD(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "# 3. Fit the model\n",
+        "model_2.fit(X, y, epochs=100, verbose=0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a_fK8SCM4kAP",
+        "outputId": "1b95f2c3-3e50-4d47-bd7b-b0abd2caffd1"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x78be843d5b50>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4 .Evaluate the model\n",
+        "model_2.evaluate(X, y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zO8wdp_o5fCQ",
+        "outputId": "2f58dd19-1e08-4b74-a8f0-2a4af8cdef4b"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4955 - loss: 0.6929\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6933998465538025, 0.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Improving our model"
+      ],
+      "metadata": {
+        "id": "iShv3jhE5sUv"
       }
     }
   ]
