callbacks to ideal lr - part1 (88)

--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHz+kgiIJmE0Q46L1hNUzh"
+      "authorship_tag": "ABX9TyMJgtgYRpsdskHT+hbV7lZ/"
     },
     "kernelspec": {
       "name": "python3",
@@ -4142,6 +4142,20 @@
       ],
       "metadata": {
         "id": "JeBtyiaeR7nz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Finding the best learning rate\n",
+        "\n",
+        "To find the ideal learning rate (the learning rate where the loss decreases the most during training) we're going to use the following steps:\n",
+        "* A learning rate **callback** - you can think of a callback as an extra piece of functionality, you can add to your **while** its training.\n",
+        "* Another model (we could use the same one as above, but we're practicing building models here)\n",
+        "* A modified loss curves plot."
+      ],
+      "metadata": {
+        "id": "ddeBV9J_UKJy"
       }
     },
     {
